@@ -1,1 +1,1 @@
-<p>Monsters on map: 
+<p>Monsters on map (level from #MINMONSTER# to #MAXMONSTER#): 
